--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1529,8 +1529,9 @@ TransformMeshesToolProperties="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Maps/ThirdPersonMap
@@ -1968,7 +1969,7 @@ TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
-UMGEditorProjectSettings.Designer =True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
