Created lots of empty blueprints for various different systems. Also made it so holding down space will continuously jump when touching the ground. Trying to basically set everything up so we know what to work with and have references to stuff already.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1383,7 +1383,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Action.Triggers\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1525,18 +1525,26 @@ EditPivotToolProperties="\"Object\" "
 InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 TransformMeshesToolProperties="\"Object\" "
+InputAction="\"Object\" \"Object.Action.Triggers\" "
+DataAsset="\"Object\" \"Object.Action.Triggers\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Player/Input/Actions/IA_Jump.IA_Jump
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/ThirdPersonMap
-MRUItem1=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem2=/Game/Player/BP_Player
+MRUItem0=/Game/Player/Input/Actions/IA_Jump
+MRUItem1=/Game/Player/BP_Player
+MRUItem2=/Game/NPCs/BP_NPC
+MRUItem3=/Game/Maps/ThirdPersonMap
+MRUItem4=/Game/Modes_Instances/Modes/GM_Bar
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2131,11 +2139,70 @@ TextRenderActor.Actor=True
 WorldDataLayers.Networking=True
 WorldPartitionMiniMap.WorldPartitionMiniMap=True
 WorldPartitionMiniMap.Networking=True
+BP_NPC_C.TransformCommon=True
+BP_NPC_C.Animation=True
+BP_NPC_C.Mesh=True
+BP_NPC_C.Tick=True
+BP_NPC_C.ComponentTick=True
+BP_NPC_C.Clothing=True
+BP_NPC_C.LeaderPoseComponent=True
+BP_NPC_C.Physics=True
+BP_NPC_C.Collision=True
+BP_NPC_C.AnimationRig=True
+BP_NPC_C.Lighting=True
+BP_NPC_C.Deformer=True
+BP_NPC_C.SkinWeights=True
+BP_NPC_C.HLOD=True
+BP_NPC_C.Rendering=True
+BP_NPC_C.PathTracing=True
+BP_NPC_C.Mobile=True
+BP_NPC_C.Navigation=True
+BP_NPC_C.RayTracing=True
+BP_NPC_C.VirtualTexture=True
+BP_NPC_C.Tags=True
+BP_NPC_C.AssetUserData=True
+BP_NPC_C.Replication=True
+BP_NPC_C.ComponentReplication=True
+BP_NPC_C.Activation=True
+BP_NPC_C.Variable=True
+BP_NPC_C.Cooking=True
+BP_NPC_C.Character Movement (General Settings)=True
+BP_NPC_C.Character Movement: Walking=True
+BP_NPC_C.Character Movement: Jumping / Falling=True
+BP_NPC_C.Character Movement: Gravity=True
+BP_NPC_C.Character Movement (Networking)=True
+BP_NPC_C.Character Movement: Swimming=True
+BP_NPC_C.Character Movement: Flying=True
+BP_NPC_C.Character Movement: Custom Movement=True
+BP_NPC_C.Character Movement (Rotation Settings)=True
+BP_NPC_C.Character Movement: Physics Interaction=True
+BP_NPC_C.Character Movement=True
+BP_NPC_C.Character Movement: Avoidance=True
+BP_NPC_C.RootMotion=True
+BP_NPC_C.Character Movement: NavMesh Movement=True
+BP_NPC_C.NavMovement=True
+BP_NPC_C.Velocity=True
+BP_NPC_C.PlanarMovement=True
+BP_NPC_C.MovementComponent=True
+BP_NPC_C.Shape=True
+BP_NPC_C.Character=True
+BP_NPC_C.Camera=True
+BP_NPC_C.Pawn=True
+BP_NPC_C.Actor=True
+BP_NPC_C.Input=True
+BP_NPC_C.WorldPartition=True
+BP_NPC_C.Events=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/ThirdPerson/Blueprints/BP_Player.BP_Player=0
 /Game/ThirdPerson/Blueprints/GM_Bar.GM_Bar=0
+/Game/NPCs/BP_NPC.BP_NPC=1
+/Game/Player/Input/Actions/IA_Jump.IA_Jump=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2255,6 +2322,25 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 /Game/VFX=(R=0.060417,G=0.234375,B=0.220370,A=1.000000)
 /Game/SFX=(R=0.337826,G=0.123884,B=0.467784,A=1.000000)
 /Game/Shared_Game_Mechanics=(R=0.467784,G=0.070453,B=0.292264,A=1.000000)
+/Game/Mini_Games/Darts=(R=0.275528,G=0.167328,B=0.467784,A=1.000000)
+/Game/Mini_Games/Pool=(R=0.467784,G=0.082806,B=0.087459,A=1.000000)
+/Game/Misc_Mechanics/Jukebox=(R=0.337826,G=0.123884,B=0.467784,A=1.000000)
+/Game/Misc_Mechanics/Outside_Loop=(R=0.467784,G=0.082806,B=0.087459,A=1.000000)
+/Game/Player/Input/Actions=(R=1.000000,G=0.000000,B=0.011317,A=1.000000)
+/Game/Player/Input/IMC=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
+/Game/Player/Input=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
+/Game/Shared_Game_Mechanics/Cards/Meshes=(R=0.467784,G=0.082806,B=0.087459,A=1.000000)
+/Game/NPCs/Decision_Making=(R=0.467784,G=0.082806,B=0.087459,A=1.000000)
+/Game/UI/Diegetic=(R=1.000000,G=0.000000,B=0.011317,A=1.000000)
+/Game/UI/Non_Diegetic=(R=0.110387,G=1.000000,B=0.000000,A=1.000000)
+/Game/Main_Game_Managers=(R=0.467784,G=0.082806,B=0.087459,A=1.000000)
+/Game/Main_Game_Managers/Auction=(R=0.718750,G=0.703183,B=0.207657,A=1.000000)
+/Game/Main_Game_Managers/I_Doubt_It=(R=0.467784,G=0.070453,B=0.292264,A=1.000000)
+/Game/Main_Game_Managers/Rat_Screw=(R=0.160065,G=0.467784,B=0.099351,A=1.000000)
+/Game/NPCs/Animations/Assets=(R=0.467784,G=0.129838,B=0.396462,A=1.000000)
+/Game/NPCs/Animations/Animation_Blueprints=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
+/Game/NPCs/Animations=(R=0.072971,G=0.309633,B=0.467784,A=1.000000)
+/Game/Misc_Mechanics/Drink_Board=(R=0.160065,G=0.467784,B=0.099351,A=1.000000)
 
 [PluginBrowser]
 InstalledPlugins=VisualStudioTools
@@ -2384,6 +2470,7 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_CLUBS_2.PLACEHOLDERS_CLUBS_2;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPECIAL_7.PLACEHOLDERS_SPECIAL_7;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPECIAL_6.PLACEHOLDERS_SPECIAL_6;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPECIAL_5.PLACEHOLDERS_SPECIAL_5;
@@ -2403,5 +2490,4 @@ RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_6.PL
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_5.PLACEHOLDERS_SPADES_5;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_4.PLACEHOLDERS_SPADES_4;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_3.PLACEHOLDERS_SPADES_3;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_2.PLACEHOLDERS_SPADES_2;
 
