Turn taking actor functions. Turn taker interface. Filled the enumerators: turn taking methods, mini game names, main game names.
Turn manager functions:
Setup main game (main game name, playing opponents (array)). This clears the playing characters array, sets the current character index turn to 0 and then sets the turn taking method to be either multi or 1v1 depending on the main game name passed. Then we get the player and add them to the playing characters array and then loop through the playing opponents array adding them to the playing characters array.

Setup mini game (mini game name, playing NPC opponent (singular). Clears playing characters array and sets current character index turn to 0. Sets current turn taking method to 1v1. Adds player to playing characters array. Adds NPC opponent to playing characters array.

Next Player Turn function. Increments the current character index turn. Then check if we reached the end of the array with this index and if so then set index to 0 if not set to be the incremented value. Then get the playing characters array value at current character index turn and call the Take Turn function in the BPI_Turn_Taker index.

New interface BPI_Turn_Taker which currently has one function called Take Turn which will force the called player to take their turn / give them the option to take an action for their turn. This interface is added to the player and NPC actors.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1383,7 +1383,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Action.Triggers\" "
+Object="\"Object\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1525,26 +1525,45 @@ EditPivotToolProperties="\"Object\" "
 InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 TransformMeshesToolProperties="\"Object\" "
-InputAction="\"Object\" \"Object.Action.Triggers\" "
-DataAsset="\"Object\" \"Object.Action.Triggers\" "
+InputAction="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
+DataAsset="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
+UserDefinedEnum="\"Object\" "
+Enum="\"Object\" "
+Field="\"Object\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
+OpenAssetsAtExit=/Game/Mini_Games/Enum_Mini_Game_Names.Enum_Mini_Game_Names
+OpenAssetsAtExit=/Game/Main_Game_Managers/Enum_Main_Game_Names.Enum_Main_Game_Names
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker.BPI_Turn_Taker
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Player/Input/Actions/IA_Jump.IA_Jump
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/Input/Actions/IA_Jump
+MRUItem0=/Game/NPCs/BP_NPC
 MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/NPCs/BP_NPC
-MRUItem3=/Game/Maps/ThirdPersonMap
-MRUItem4=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem2=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker
+MRUItem3=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem4=/Game/Mini_Games/Enum_Mini_Game_Names
+MRUItem5=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem6=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
+MRUItem7=/Game/Player/Input/Actions/IA_Jump
+MRUItem8=/Game/Maps/ThirdPersonMap
+MRUItem9=/Game/Modes_Instances/Modes/GM_Bar
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2196,13 +2215,46 @@ InputAction.Description=True
 InputAction.Action=True
 InputAction.Input Consumption=True
 InputAction.User Settings=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
+BP_Turn_Manager_C.Tick=True
+BP_Turn_Manager_C.Replication=True
+BP_Turn_Manager_C.Rendering=True
+BP_Turn_Manager_C.Collision=True
+BP_Turn_Manager_C.Actor=True
+BP_Turn_Manager_C.Input=True
+BP_Turn_Manager_C.HLOD=True
+BP_Turn_Manager_C.Physics=True
+BP_Turn_Manager_C.WorldPartition=True
+BP_Turn_Manager_C.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/ThirdPerson/Blueprints/BP_Player.BP_Player=0
 /Game/ThirdPerson/Blueprints/GM_Bar.GM_Bar=0
-/Game/NPCs/BP_NPC.BP_NPC=1
-/Game/Player/Input/Actions/IA_Jump.IA_Jump=1
+/Game/NPCs/BP_NPC.BP_NPC=0
+/Game/Player/Input/Actions/IA_Jump.IA_Jump=0
+/Game/Player/BP_Player.BP_Player=0
+/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods.Enum_Turn_Taking_Methods=1
+/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2265,7 +2317,7 @@ bHideLevelInstanceContent=True
 bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
+PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
