Card Dealer Setup. BPI Card. Struct Card. Data table for cards. Card Names placeholder just so struct works. Card setup in construction script.
Card dealer actor which will contain all functionality for the setup of cards, shuffling of cards, and dealing of cards. These are all functions. Also the cards will be object pooled since there will be at least 60 probably so can just spawn them all in at the start of the game and then use them from this one card dealer actor which stores them all in an array called All Cards. This actor also has 2 other card arrays called player cards (the cards held by players both NPC and PC) and also Pile Cards which are the cards that are in the pile (both at the start of the game and during). There are also functions for removing and adding cards to/from the pile but these are not at all setup.

Setup cards function: main game name passed. Switch based on this. if i doubt it or rat screw then played cards are merely the all cards array since these games have players have all the cards in a deck. If it is action the player cards are only cards with a numerical value between 2 and 10 inclusive. We use the get card info function here from the card interface to check the numerical value. If it is not of this numerical range it is added to the pile cards array.

Shuffle cards function checks if pile cards is empty before shuffling them if not and then shuffles the player cards after both true for empty and shuffling pile cards.

Deal cards passes game name and players (array of actors) and then switches on the game name. Then this array will add the cards to each player as appropriate. This is not yet implemented but will be.

New card interface called BPI_Card which currently has one function to get the card info with return type struct_card.
This is obviously implemented in the card actor.

Struct_Card contains the following info: card name (enumerator of type card_names), static mesh, and numerical value (ace is 1 etc, king is 11, queen

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -279,6 +279,8 @@ TcpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
+UserDefinedStruct=UserDefinedStruct.Structure.F05498EF465454EDBDC48998DE45FAE6
+Struct_Card=UserDefinedStruct.Structure.F05498EF465454EDBDC48998DE45FAE6
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game
@@ -1532,10 +1534,23 @@ Enum="\"Object\" "
 Field="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
+StaticMeshComponent="\"Object\" "
+K2Node_BreakStruct="\"Object\" "
+K2Node_StructMemberGet="\"Object\" "
+K2Node_StructOperation="\"Object\" "
+K2Node_Variable="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
+DataTable="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1547,18 +1562,30 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/Struct_Card.Struct_Card
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names.Enum_Card_Names
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/BP_NPC
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker
-MRUItem3=/Game/Main_Game_Managers/Enum_Main_Game_Names
-MRUItem4=/Game/Mini_Games/Enum_Mini_Game_Names
-MRUItem5=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem6=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
-MRUItem7=/Game/Player/Input/Actions/IA_Jump
-MRUItem8=/Game/Maps/ThirdPersonMap
-MRUItem9=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/Struct_Card
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem6=/Game/NPCs/BP_NPC
+MRUItem7=/Game/Player/BP_Player
+MRUItem8=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker
+MRUItem9=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem10=/Game/Mini_Games/Enum_Mini_Game_Names
+MRUItem11=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
+MRUItem13=/Game/Player/Input/Actions/IA_Jump
+MRUItem14=/Game/Maps/ThirdPersonMap
+MRUItem15=/Game/Modes_Instances/Modes/GM_Bar
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2240,6 +2267,51 @@ Blueprint.ClassOptions=True
 Blueprint.BlueprintOptions=True
 Blueprint.Imports=True
 Blueprint.Interfaces=True
+BP_Card_Shuffler_C.Tick=True
+BP_Card_Shuffler_C.Replication=True
+BP_Card_Shuffler_C.Rendering=True
+BP_Card_Shuffler_C.Collision=True
+BP_Card_Shuffler_C.Actor=True
+BP_Card_Shuffler_C.Input=True
+BP_Card_Shuffler_C.HLOD=True
+BP_Card_Shuffler_C.Physics=True
+BP_Card_Shuffler_C.WorldPartition=True
+BP_Card_Shuffler_C.Events=True
+UserDefinedStruct.Structure=True
+BP_Card_C.Tick=True
+BP_Card_C.Replication=True
+BP_Card_C.Rendering=True
+BP_Card_C.Collision=True
+BP_Card_C.Actor=True
+BP_Card_C.Input=True
+BP_Card_C.HLOD=True
+BP_Card_C.Physics=True
+BP_Card_C.WorldPartition=True
+BP_Card_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+K2Node_VariableGet.Events=True
+K2Node_BreakStruct.PinOptions=True
+Struct_Card.None=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+UserDefinedStruct.DefaultValues=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -2254,6 +2326,7 @@ Blueprint.Interfaces=True
 /Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods.Enum_Turn_Taking_Methods=1
 /Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager=1
 None=======
+/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
