Various fixes of oversight in BP_Card, BP_Card_Dealer and BP_Turn_Manager. Commenting
Fixed a few mistakes I had made in these blueprints.

Commented these blueprints.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1542,10 +1542,12 @@ K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
@@ -1556,32 +1558,29 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/Struct_Card.Struct_Card
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names.Enum_Card_Names
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/Struct_Card
-MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem6=/Game/NPCs/BP_NPC
-MRUItem7=/Game/Player/BP_Player
-MRUItem8=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker
-MRUItem9=/Game/Main_Game_Managers/Enum_Main_Game_Names
-MRUItem10=/Game/Mini_Games/Enum_Mini_Game_Names
-MRUItem11=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem0=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/Struct_Card
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem7=/Game/NPCs/BP_NPC
+MRUItem8=/Game/Player/BP_Player
+MRUItem9=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker
+MRUItem10=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem11=/Game/Mini_Games/Enum_Mini_Game_Names
 MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
 MRUItem13=/Game/Player/Input/Actions/IA_Jump
 MRUItem14=/Game/Maps/ThirdPersonMap
@@ -2312,6 +2311,19 @@ K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
 UserDefinedStruct.DefaultValues=True
+BP_Card_C.Default=True
+BP_Card_Dealer_C.Tick=True
+BP_Card_Dealer_C.Replication=True
+BP_Card_Dealer_C.Rendering=True
+BP_Card_Dealer_C.Collision=True
+BP_Card_Dealer_C.Actor=True
+BP_Card_Dealer_C.Input=True
+BP_Card_Dealer_C.HLOD=True
+BP_Card_Dealer_C.Physics=True
+BP_Card_Dealer_C.WorldPartition=True
+BP_Card_Dealer_C.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -2327,6 +2339,10 @@ UserDefinedStruct.DefaultValues=True
 /Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager=1
 None=======
 /Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card=0
+/Game/Shared_Game_Mechanics/Cards/Struct_Card.Struct_Card=1
+/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards=1
+/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card=1
+/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names.Enum_Card_Names=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
