Changed BPI_Turn_Taker to BPI_Playing_Character so more general in its naming and function. Card dealer add card to pile and remove card from pile functions. Simplified some card dealer functions to only doing one thing in them. More functions in Playing Character interface.
The turn taker interface has now been changed to playing character interface and is found in the shared mechanics folder. This is so we are creating lots of interfaces when we can have just a few with the majority of the functions within it. This interface is now used for the removing and adding of cards to player hands.

Split the add card to pile and remove card to pile into multiple smaller functions since I was going to make them also add and remove from player hands but better to have those as separate functions in the card dealer since this will allow for easy card control and flow.

New functions then for adding cards to player hand and removing them from a character's hand. Pass the character to affect and the card to add / remove. These functions basically just call the corresponding function in the passed character's interface but this card dealer should act as an intermediary for card flow and control in the games.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1547,6 +1547,8 @@ EdGraphNode_Comment="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
@@ -1558,27 +1560,26 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem5=/Game/Shared_Game_Mechanics/Cards/Struct_Card
-MRUItem6=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem7=/Game/NPCs/BP_NPC
-MRUItem8=/Game/Player/BP_Player
-MRUItem9=/Game/Shared_Game_Mechanics/Turn_Taking/BPI_Turn_Taker
+MRUItem0=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem1=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/Struct_Card
+MRUItem7=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem8=/Game/NPCs/BP_NPC
+MRUItem9=/Game/Player/BP_Player
 MRUItem10=/Game/Main_Game_Managers/Enum_Main_Game_Names
 MRUItem11=/Game/Mini_Games/Enum_Mini_Game_Names
 MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
@@ -2324,6 +2325,7 @@ BP_Card_Dealer_C.WorldPartition=True
 BP_Card_Dealer_C.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+BP_Turn_Manager_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
