--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
@@ -279,11 +279,25 @@ TcpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
-UserDefinedStruct=UserDefinedStruct.Structure.F05498EF465454EDBDC48998DE45FAE6
-Struct_Card=UserDefinedStruct.Structure.F05498EF465454EDBDC48998DE45FAE6
+UserDefinedStruct=
+Struct_Card=
+PropertyWrapper=
+BP_Card_Dealer_C=
+EdGraph=PropertyWrapper.DefaultValueCategory.All Cards
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards
+BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
+BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards
+K2Node=PropertyWrapper.DefaultValueCategory.All Cards
+Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
+Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
+Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards
+Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1381,6 +1395,8 @@ Voice.TimeStamp=2024.10.04-15.08.54
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.10.04-15.08.51
 MovieSceneCapture.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2024.02.20-13.59.46
+DataTableEditor.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1543,19 +1559,26 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+BPC_CurrentHand_C="\"Object\" "
+BP_Card_Dealer_C=
+BillboardComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1564,28 +1587,28 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem1=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
 MRUItem2=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/Struct_Card
 MRUItem4=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem6=/Game/Shared_Game_Mechanics/Cards/Struct_Card
-MRUItem7=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem8=/Game/NPCs/BP_NPC
-MRUItem9=/Game/Player/BP_Player
-MRUItem10=/Game/Main_Game_Managers/Enum_Main_Game_Names
-MRUItem11=/Game/Mini_Games/Enum_Mini_Game_Names
-MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
-MRUItem13=/Game/Player/Input/Actions/IA_Jump
-MRUItem14=/Game/Maps/ThirdPersonMap
-MRUItem15=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem5=/Game/Player/BP_Player
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem7=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem8=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem9=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem10=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem12=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem13=/Game/NPCs/BP_NPC
+MRUItem14=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem15=/Game/Mini_Games/Enum_Mini_Game_Names
+MRUItem16=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
+MRUItem17=/Game/Player/Input/Actions/IA_Jump
+MRUItem18=/Game/Maps/ThirdPersonMap
+MRUItem19=/Game/Modes_Instances/Modes/GM_Bar
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2326,6 +2349,62 @@ BP_Card_Dealer_C.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 BP_Turn_Manager_C.Default=True
+BP_Rat_Screw_Game_Manager_C.Tick=True
+BP_Rat_Screw_Game_Manager_C.Replication=True
+BP_Rat_Screw_Game_Manager_C.Rendering=True
+BP_Rat_Screw_Game_Manager_C.Collision=True
+BP_Rat_Screw_Game_Manager_C.Actor=True
+BP_Rat_Screw_Game_Manager_C.Input=True
+BP_Rat_Screw_Game_Manager_C.HLOD=True
+BP_Rat_Screw_Game_Manager_C.Physics=True
+BP_Rat_Screw_Game_Manager_C.WorldPartition=True
+BP_Rat_Screw_Game_Manager_C.Events=True
+BPC_CurrentHand_C.ComponentTick=True
+BPC_CurrentHand_C.Tags=True
+BPC_CurrentHand_C.ComponentReplication=True
+BPC_CurrentHand_C.Activation=True
+BPC_CurrentHand_C.Variable=True
+BPC_CurrentHand_C.Cooking=True
+BP_Card_Dealer_C.TransformCommon=True
+BP_Card_Dealer_C.Networking=True
+BP_Rat_Screw_Game_Manager_C.TransformCommon=True
+BP_Rat_Screw_Game_Manager_C.Networking=True
+BP_I_Doubt_It_Game_Manager_C.TransformCommon=True
+BP_I_Doubt_It_Game_Manager_C.Rendering=True
+BP_I_Doubt_It_Game_Manager_C.Replication=True
+BP_I_Doubt_It_Game_Manager_C.Collision=True
+BP_I_Doubt_It_Game_Manager_C.HLOD=True
+BP_I_Doubt_It_Game_Manager_C.Physics=True
+BP_I_Doubt_It_Game_Manager_C.Networking=True
+BP_I_Doubt_It_Game_Manager_C.WorldPartition=True
+BP_I_Doubt_It_Game_Manager_C.Input=True
+BP_I_Doubt_It_Game_Manager_C.Actor=True
+BP_Auction_Game_Manager_C.TransformCommon=True
+BP_Auction_Game_Manager_C.Rendering=True
+BP_Auction_Game_Manager_C.Replication=True
+BP_Auction_Game_Manager_C.Collision=True
+BP_Auction_Game_Manager_C.HLOD=True
+BP_Auction_Game_Manager_C.Physics=True
+BP_Auction_Game_Manager_C.Networking=True
+BP_Auction_Game_Manager_C.WorldPartition=True
+BP_Auction_Game_Manager_C.Input=True
+BP_Auction_Game_Manager_C.Actor=True
+K2Node_VariableSet.Events=True
+BPC_CurrentHand_C.Sockets=True
+BPC_CurrentHand_C.Events=True
+BP_CardPile_C.Tick=True
+BP_CardPile_C.Replication=True
+BP_CardPile_C.Rendering=True
+BP_CardPile_C.Collision=True
+BP_CardPile_C.Actor=True
+BP_CardPile_C.Input=True
+BP_CardPile_C.HLOD=True
+BP_CardPile_C.Physics=True
+BP_CardPile_C.WorldPartition=True
+BP_CardPile_C.Events=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -2345,6 +2424,11 @@ None=======
 /Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards=1
 /Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card=1
 /Game/Shared_Game_Mechanics/Cards/Enum_Card_Names.Enum_Card_Names=1
+/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager=1
+/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand=1
+/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer=1
+/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits.Enum_Card_Suits=1
+/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2412,7 +2496,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2613,6 +2697,10 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager;
+RecentlyPlaced=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager;
+RecentlyPlaced=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager;
+RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_CLUBS_2.PLACEHOLDERS_CLUBS_2;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPECIAL_7.PLACEHOLDERS_SPECIAL_7;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPECIAL_6.PLACEHOLDERS_SPECIAL_6;
@@ -2629,8 +2717,7 @@ RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_10.P
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_9.PLACEHOLDERS_SPADES_9;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_8.PLACEHOLDERS_SPADES_8;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_7.PLACEHOLDERS_SPADES_7;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_6.PLACEHOLDERS_SPADES_6;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_5.PLACEHOLDERS_SPADES_5;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_4.PLACEHOLDERS_SPADES_4;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_3.PLACEHOLDERS_SPADES_3;
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
