Rat Screw dealing implemented, comments are in the BP
two for loops one for the player + one for opponent, adds the first 30 cards in deck to player and then the final 30 to opponent.

sorta way easier then whatever i was doin

we could also maybe instead of not doing it in a function just have an animation, just a buncha cards moving to the players side as if they're not receiving them all at once but in reality they did, up to u and artists if they want to animate that (or we  could try something)

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -303,7 +303,7 @@ BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards
+CapsuleComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -1619,26 +1619,23 @@ RecentAssetEditors=
 None=======
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
 OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
 MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem5=/Game/NPCs/BP_NPC
-MRUItem6=/Game/Player/BP_Player
-MRUItem7=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem8=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem9=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem10=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem3=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem4=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem6=/Game/NPCs/BP_NPC
+MRUItem7=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem8=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem9=/Game/Player/BP_Player
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem11=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
 MRUItem12=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
 MRUItem13=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
 MRUItem14=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
@@ -2464,6 +2461,7 @@ K2Node_Tunnel.Outputs=True
 BP_Turn_Manager_C.TransformCommon=True
 BP_Turn_Manager_C.Networking=True
 BP_Player_C.Networking=True
+BP_NPC_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -2491,6 +2489,7 @@ None=======
 /Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager=1
 /Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
